--- a/Purchasing.Mvc/Views/Wizard/Addresses.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/Addresses.cshtml
@@ -31,10 +31,10 @@
 			<th>
 				Name
 			</th>
+            <th>Campus Location Code</th>
 		    <th>
 		        Building
 		    </th>
-            <th>Building Code</th>
 			<th>
 				Room
 			</th>
@@ -64,13 +64,14 @@
 			<td>
 				@item.Name
 			</td>
+			<td>
+				@item.AeLocationCode
+
+			</td>
 		    <td>
 		        @item.Building
 		    </td>
-		    <td>
-		        @Html.Encode(item.BuildingCode != null ? item.BuildingCode.Id : string.Empty)		        
 
-		    </td>
 			<td>
 				@item.Room
 			</td>
