--- a/Purchasing.Mvc/Views/Workgroup/Addresses.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/Addresses.cshtml
@@ -61,8 +61,7 @@
                 @Html.ActionLink(item.Name, "AddressDetails", "Workgroup", new {id=item.Workgroup.Id, addressid = item.Id}, new {})
 			</td>
 			<td>
-				@Html.Encode(!string.IsNullOrWhiteSpace(item.AeLocationCode) ? item.AeLocationCode : string.Empty)
-
+				@item.AeLocationCode
 			</td>
 		    <td>
 		        @item.Building
