--- a/Purchasing.Mvc/Views/Order/_Options.cshtml
+++ b/Purchasing.Mvc/Views/Order/_Options.cshtml
@@ -13,6 +13,8 @@ purchasing.options({
     SearchVendorAddressUrl: '@Url.Action("SearchVendorAddress", "WorkgroupVendor")',
     SearchCommodityCodeUrl: '@Url.Action("SearchCommodityCodes", "Ajax")',
     SearchBuildingUrl : '@Url.Action("SearchBuilding", "Ajax")',
+    SearchCampusLocationUrl : '@Url.Action("SearchAddress", "Workgroup")',
+    GetCampusLocationUrl : '@Url.Action("GetAddress", "Workgroup")',
     GetLineItemsAndSplitsUrl: '@Url.Action("GetLineItemsAndSplits", new { id = Model.Order.Id })',
     GetSubAccounts: '@Url.Action("GetSubAccounts", new { id = Model.Order.Id })',
     GetRequesters: '@Url.Action("GetRequesters", "Order", new { id = Model.Workgroup.Id })',
