--- a/Purchasing.Mvc/Views/Order/_ReviewSubmit.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewSubmit.cshtml
@@ -38,13 +38,13 @@
                         <li>
                             <div class="display-label">Complete order as </div>
                             <div class="display-details">
-                                @Html.Select("orderType", o => o.Options(Model.OrderTypes, x => x.Id, x => x.Name).Selected("KFS"))
-                                <select id="kfsDocType" name="kfsdoctype">
+                                @Html.Select("orderType", o => o.Options(Model.OrderTypes, x => x.Id, x => x.Name).Selected("AE"))
+                                <select id="kfsDocType" name="kfsdoctype" style="display: none">
                                     <option value="">-- Select A Document Type --</option>                                  
                                     <option value="PR">Purchase Request</option>
                                     <option value="PR2">Purchase Request without KFS Document</option>
                                 </select>
-                                <input type="submit" id="complete-order" name="action" class="button" value="Complete" disabled="disabled"/>
+                                <input type="submit" id="complete-order" name="action" class="button" value="Complete"/>
                             </div>
                         </li>
                         <li>
