--- a/Purchasing.Mvc/Views/Workgroup/AccountDetails.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/AccountDetails.cshtml
@@ -48,6 +48,22 @@
     </section>
 }
 
+@if(!string.IsNullOrWhiteSpace( Model.WorkgroupAccount.FinancialSegmentString) && Model.AccountValidationModel?.IsValid == false){
+    <section class="display-form ui-corner-all">
+        <header class="ui-corner-top ui-widget-header" style="color: red">CoA is not valid!!!</header>
+
+        <ul>
+            @foreach (var detail in Model.AccountValidationModel.Messages)
+            {
+                <li>
+                    <div class="display-label">Error</div>
+                    <div class=display-details>@detail</div>
+                </li>
+            }
+        </ul>
+    </section>
+}
+
 @if (Model.AccountValidationModel.Warnings.Any())
 {
     <section class="display-form ui-corner-all">
