--- a/Purchasing.Mvc/Views/Workgroup/AddAccount.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/AddAccount.cshtml
@@ -44,7 +44,7 @@
                     $("#WorkgroupAccount_FinancialSegmentString").val(chart.data);
                 }
                 else {
-                    alert("Something went wrong with the CCOA picker")
+                    alert("Something went wrong with the CoA picker")
                 }
                 return false;
             });
