--- a/Purchasing.Mvc/Views/Wizard/_AccountsTable.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/_AccountsTable.cshtml
@@ -5,8 +5,8 @@
 <table class='dt-table no-icon-table no_select'>
     <thead>
         <tr>            
-            <th>Id</th>
             <th>Name</th>
+            <th>Account</th>
             <th>Approver</th>
             <th>Manager</th>
             <th>Purchaser</th>
@@ -17,8 +17,8 @@
         @foreach (var item in Model)
         {
             <tr class="@(odd ? "odd" : "even")">                
-                <td>@item.Account.Id</td>
-                <td>@item.Account.Name</td>
+                <td>@item.GetName</td>
+                <td>@item.GetAccount</td>
                 <td>@(item.Approver != null ? @item.Approver.FullNameAndId : string.Empty)</td>
                 <td>@(item.AccountManager != null ? item.AccountManager.FullNameAndId : string.Empty)</td>                
                 <td>@(item.Purchaser != null ? item.Purchaser.FullNameAndId : string.Empty)</td>
