--- a/Purchasing.Mvc/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewLineItems.cshtml
@@ -91,7 +91,7 @@
                                             @foreach (var split in Model.Splits.Where(x => x.LineItem == line))
                                             {  
                                                 <tr>
-                                                    <td>@(string.IsNullOrWhiteSpace(split.Account) ? "n/a" : split.AccountDisplay)</td>
+                                                    <td>@(string.IsNullOrWhiteSpace(split.Account) && string.IsNullOrWhiteSpace(split.FinancialSegmentString) ? "n/a" : split.AccountDisplay)</td>
                                                     <td>@(string.IsNullOrWhiteSpace(split.SubAccount) ? "n/a" : Model.GetSubAccountDisplayForSplit(split))</td>
                                                     <td>@(string.IsNullOrWhiteSpace(split.Project) ? "n/a" : split.Project)</td>
                                                     <td>@split.Amount</td>
