--- a/Purchasing.Mvc/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Mvc/Views/Order/_LineItems.cshtml
@@ -69,6 +69,7 @@
                 <tr data-bind="visible: $root.showForSplit('Line')" class="line-item-splits">
                     <td colspan="4">
                         <input data-bind="value: id, itemName: 'id'" type="hidden" class="line-item-ids" />
+                        <span>Hover over the account name to see the account</span>
                         <table class="sub-line-item-split">
                             <tbody data-bind="foreach: splits" class="sub-line-item-split-body">
                                 <tr class="sub-line-item-split-row">
