--- a/Purchasing.Mvc/Views/Order/_OrderSplits.cshtml
+++ b/Purchasing.Mvc/Views/Order/_OrderSplits.cshtml
@@ -10,6 +10,7 @@
             <p>
                 Please enter the accounts and the distribution amount/percent for each split. The distributed amounts must add up to the Order Total.
             </p>
+            <p>Hover over the account name to see the account</p>
         </div>
 
         <table id="order-splits">
