--- a/Purchasing.Mvc/Views/Order/_AccountSelectTemplate.cshtml
+++ b/Purchasing.Mvc/Views/Order/_AccountSelectTemplate.cshtml
@@ -3,5 +3,7 @@
         <option data-bind="value: id, text: text, attr: { title: title }"></option>
     </select>
     <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0 0.1em 0; padding-top: .4em; vertical-align: sub;">
-    <a href="#" title="Search Accounts" class="search-account ui-icon ui-icon-search"></a></span>
+        <a href="#" title="CoA Picker" class="coa-picker ui-icon ui-icon-search"></a>
+    </span>
+    
 </div>
