--- a/Purchasing.Mvc/Views/Order/_OrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_OrderDetails.cshtml
@@ -42,7 +42,8 @@
                             <option data-bind="value: id, text: text, attr: { title: title }"></option>
                         </select>
                         <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0 0.1em 0; padding-top: .4em; vertical-align: sub; float: none; width: auto; display: inline;">
-                        <a href="#" title="Search Accounts" class="search-account ui-icon ui-icon-search"></a></span>
+                            <a href="#" title="CoA Picker" class="coa-picker ui-icon ui-icon-search"></a>
+                        </span>
                     </div>
 				</div>
 
